--- a/package.json
+++ b/package.json
@@ -9,14 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.0.17",
+    "@mui/material": "^5.13.4",
+    "@mui/styles": "^5.13.2",
+    "@portabletext/react": "^3.0.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.1",
+    "next-sanity": "^4.3.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-useanimations": "^2.10.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "sanity": "^3.10.1",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
