--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-query": "^3.39.3",
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
