--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.6.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.1",
     "next-sanity": "^4.3.2",
