--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.4",
     "@mui/styles": "^5.13.2",
     "@portabletext/react": "^3.0.0",
+    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
