--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.17",
-    "@mui/material": "^5.13.4",
-    "@mui/styles": "^5.13.2",
     "@portabletext/react": "^3.0.0",
     "@sanity/image-url": "^1.0.2",
     "@types/node": "20.1.1",
@@ -22,6 +20,7 @@
     "antd": "^5.6.4",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.3.1",
+    "framer-motion": "^11.0.24",
     "next": "13.4.1",
     "next-sanity": "^4.3.2",
     "postcss": "8.4.23",
