--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
-    "react-query": "^3.39.3",
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "sanity": "^3.10.1",
     "swiper": "^9.3.2",
+    "swr": "^2.2.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
