--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.4",
     "antd": "^5.6.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.8",
     "dotenv": "^16.3.1",
     "framer-motion": "^11.0.24",
     "next": "13.4.1",
