--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "swiper": "^9.3.2",
     "swr": "^2.2.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
