--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.17",
     "@portabletext/react": "^3.0.0",
+    "@react-email/components": "0.0.19",
     "@sanity/image-url": "^1.0.2",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
@@ -26,10 +27,12 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-email": "2.1.4",
     "react-icons": "^4.10.1",
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "resend": "^3.4.0",
     "swiper": "^9.3.2",
     "swr": "^2.2.5",
     "tailwindcss": "3.3.2",
