--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.17",
-    "@portabletext/react": "^3.0.0",
-    "@sanity/image-url": "^1.0.2",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -29,13 +27,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-useanimations": "^2.10.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
+    "sharp": "^0.33.5",
     "swiper": "^9.3.2",
     "swr": "^2.2.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "uuid": "^9.0.1"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.8"
