--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.0.17",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -33,7 +32,5 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
-  "devDependencies": {
-    "@types/uuid": "^9.0.8"
-  }
+  "devDependencies": {}
 }
