--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^11.0.24",
     "next": "13.4.1",
+    "plaiceholder": "^3.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,6 +32,5 @@
     "swr": "^2.2.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
-  },
-  "devDependencies": {}
+  }
 }
