--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-helmet": "^6.1.11",
     "antd": "^5.6.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.6.8",
@@ -25,6 +26,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-useanimations": "^2.10.0",
     "sharp": "^0.32.0",
